--- a/src/style.css
+++ b/src/style.css
@@ -212,6 +212,8 @@ input {
   max-height: 160px;
   overflow-y: auto;
   padding-right: 0.3rem;
+  font-size: 0.75rem;
+  line-height: 1.4;
 }
 
 .battlefield-area {
